added classes for article, ordered markup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Шапка страницы</p>
       </header>
       <main class="main">
-        <div>
+        <div class="first">
           <p>Основная часть</p>
         </div>
         <div class="second">
